<resources>
    <string name="app_name">MyGoogleMaps</string>
    <string name="title_activity_alternative_direction_maps">Map</string>
    <string name="request_direction">Request Direction</string>
    <string name="alternative_direction">Alternative Direction</string>
    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="search_title">Search</string>

    <!--Titles Appbar-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Market</item>
        <item>SmartPhone</item>
        <item>Clothes</item>
        <item>Coffee</item>
        <item>Gas Station</item>
    </string-array>
    <!--Navigaton View-->
    <string name="home">Nhà</string>
    <string name="clothes">CH Quần Áo</string>
    <string name="restaurant">Nhà Hàng</string>
    <string name="hotel">Khách Sạn</string>
    <string name="cafe">Quán Cà Phê</string>
    <string name="Mall">Chợ</string>
    <string name="phone">CH Điện Thoại</string>
    <string name="gas_station">Cây Xăng</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
